export { HomeScreen as default } from '@/features/movies/presentation/home-screen';
